# docx_processor

./: docx_processor.spec  pyproject.toml
docx_processor/: __main__.py  gui.py  processor.py
