[project]
name = "bank-transactions"
version = "0.1.0"
description = ""
authors = [
    {name = "pavelyanu",email = "pyanushonak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "docx2python (>=3.5.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "types-lxml (>=2025.3.30,<2026.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

